--- a/src/tools/Makefile
+++ b/src/tools/Makefile
@@ -2,10 +2,10 @@ BASEDIR	=	../..
 
 CC	=	g++
 CXX	=	g++
-CPPFLAGS = -Wall -O2 -I ${BASEDIR}/include
+CPPFLAGS = -Wall -std=c++11	-O2 -I ${BASEDIR}/include
 CFLAGS =
 LDFLAGS = -L ${BASEDIR}/lib
-LDLIBS =
+LDLIBS =	-lpthread
 
 GENERATED	=	teste_clock
 
